--- a/.sfdx/sfdx-config.json
+++ b/.sfdx/sfdx-config.json
@@ -1,4 +1,4 @@
 {
-    "defaultusername": "source-org",
-    "defaultdevhubusername": "raja.m.s@mstsolutions.com"
+    "defaultusername": "test-mmsvlbaxsi0d@demo_company.net",
+    "defaultdevhubusername": "devops@mstsolutions.com.dx"
 }
